Fix issue with borders overlapping

--- a/app/styles/cells.less
+++ b/app/styles/cells.less
@@ -3,6 +3,7 @@
 .hypertable__cell {
   border-bottom: 1px solid lighten(@upf-gray, 15%);
   border-left: 1px solid lighten(@upf-gray, 15%);
+  border-right: 1px solid lighten(@upf-gray, 15%);
   display: flex;
   align-items: center;
   background-color: white;
@@ -10,7 +11,7 @@
   height: @cell-height;
   max-height: @cell-height;
   padding: @spacing-xx-sm;
-  width: 100%;
+  width: calc(100% + 2px);
 
   .tooltip > .tooltip-inner {
     padding: 5px;
