--- a/app/styles/columns.less
+++ b/app/styles/columns.less
@@ -45,6 +45,7 @@
 
   header {
     border-left: 1px solid lighten(@upf-gray, 15%);
+    border-right: 1px solid lighten(@upf-gray, 15%);
   }
 }
 
@@ -56,7 +57,7 @@
   height: @cell-height;
   max-height: @cell-height;
   padding: @spacing-xx-sm;
-  width: 100%;
+  width: calc(100% + 2px);
 
   background-color: @upf-gray-light;
   color: @upf-primary-rock-blue;
